native/include/jyppx/cuda/runtime.h

JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_launch_kernel_ex(const JYPPX_CudaLaunchConfig* config, const void* function, void** arguments);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_logs_get_current_cursor_safe(uint32_t* out_iterator);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_logs_dump_to_memory_safe(JYPPX_Boolean use_iterator, uint32_t iterator, char* output_buffer, size_t output_buffer_size, size_t* out_written_size, uint32_t* out_next_iterator);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_logs_dump_to_file_safe(JYPPX_Boolean use_iterator, uint32_t iterator, const char* path, uint32_t* out_next_iterator);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_managed_memory_prefetch_batch_async_safe(const JYPPX_CudaManagedMemoryBatchRange* ranges, size_t range_count, JYPPX_CudaStream* stream);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_managed_memory_discard_batch_async_safe(const JYPPX_CudaManagedMemoryBatchRange* ranges, size_t range_count, JYPPX_CudaStream* stream);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_managed_memory_discard_and_prefetch_batch_async_safe(const JYPPX_CudaManagedMemoryBatchRange* ranges, size_t range_count, JYPPX_CudaStream* stream);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_managed_memory_prefetch_location_range_async_safe(JYPPX_CudaMemory* memory, size_t offset, size_t count, int32_t location_type, int32_t location_id, JYPPX_CudaStream* stream);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_managed_memory_advise_location_range_safe(JYPPX_CudaMemory* memory, size_t offset, size_t count, int32_t advice, int32_t location_type, int32_t location_id);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_malloc_host(size_t size, JYPPX_CudaPinnedMemory** out_memory);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_malloc_3d(size_t width_bytes, size_t height, size_t depth, JYPPX_CudaPitchedMemory** out_memory);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_mem_get_default_mem_pool(const JYPPX_CudaMemLocation* location, int32_t allocation_type, uint64_t* out_pool_handle);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_mem_get_mem_pool(const JYPPX_CudaMemLocation* location, int32_t allocation_type, uint64_t* out_pool_handle);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_mem_pool_export_to_shareable_handle(uint64_t pool_handle, int32_t handle_type, uint32_t flags, void* shareable_handle);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_mem_pool_import_from_shareable_handle(void* shareable_handle, int32_t handle_type, uint32_t flags, uint64_t* out_pool_handle);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_mem_pool_export_pointer(void* pointer, JYPPX_CudaMemPoolPtrExportData* out_export_data);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_malloc_array(const JYPPX_CudaChannelFormatDesc* descriptor, size_t width, size_t height, uint32_t flags, JYPPX_CudaArray** out_array);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_malloc_3d_array(const JYPPX_CudaChannelFormatDesc* descriptor, const JYPPX_CudaArrayExtent* extent, uint32_t flags, JYPPX_CudaArray** out_array);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_malloc_mipmapped_array(const JYPPX_CudaChannelFormatDesc* descriptor, const JYPPX_CudaArrayExtent* extent, uint32_t level_count, uint32_t flags, JYPPX_CudaMipmappedArray** out_array);
/* END CUDA FIFTIETH BATCH TEXTURE AND SURFACE ARRAY OWNERS */

/* BEGIN CUDA FIFTY-FIRST BATCH KERNEL LIBRARY METADATA */
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_kernel_library_load_data_copy_safe(const uint8_t* code, size_t code_size, JYPPX_CudaKernelLibrary** out_library);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_kernel_library_load_file_safe(const char* path, JYPPX_CudaKernelLibrary** out_library);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_kernel_library_destroy_safe(JYPPX_CudaKernelLibrary* library);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_kernel_library_get_count_safe(JYPPX_CudaKernelLibrary* library, uint32_t* out_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_kernel_library_get_inventory_safe(JYPPX_CudaKernelLibrary* library, JYPPX_CudaKernelLibraryInventory* out_inventory);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_kernel_library_contains_kernel_safe(JYPPX_CudaKernelLibrary* library, const char* name, JYPPX_Boolean* out_exists);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_kernel_library_try_get_global_size_safe(JYPPX_CudaKernelLibrary* library, const char* name, JYPPX_Boolean* out_exists, uint64_t* out_size);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_kernel_library_try_get_managed_size_safe(JYPPX_CudaKernelLibrary* library, const char* name, JYPPX_Boolean* out_exists, uint64_t* out_size);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_kernel_library_contains_unified_function_safe(JYPPX_CudaKernelLibrary* library, const char* name, JYPPX_Boolean* out_exists);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_library_enumerate_kernels_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_library_get_global_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_library_get_kernel_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_library_get_kernel_count_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_library_get_managed_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_library_get_unified_function_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_library_load_data_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_library_load_from_file_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_library_unload_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_logs_current_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_logs_dump_to_file_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_logs_dump_to_memory_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_logs_register_callback_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_logs_unregister_callback_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_mem_advise_v2_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_mem_discard_and_prefetch_batch_async_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_mem_discard_batch_async_deferred(void);